# src/casing/interface/ICasingDetailRequest.ts
@@ -1,6 +1,0 @@
-export interface ICasingDetailRequest {
-    crnnumber: string;
-    salesOrg: string;
-    distChannel: string;
-    soldTo: string;
-}
