# src/casing/interface/ICasingResponse.ts
@@ -1,6 +1,0 @@
-export interface ICasingResponse {
-    isPending: boolean;
-    hasAtLeastOneCOCCasing: boolean;
-    hasAtLeastOneCBCasing: boolean;
-    crnData: any;
-}
